<resources>
    <string name="app_name">ReportBank</string>
    <string name="text_report_button_transaction">رسید تراکنش</string>
    <string name="text_report_textView_balanced">موجودی باقیمانده: ۱۰۰۰۰ریال</string>
    <string name="text_report_hint_note">Note...</string>
    <string name="text_report_textView_payment">رسید پرداخت</string>
    <string name="text_report_textView_date_time">دوشنبه ۱۷ خرداد ۱۴۰۰ ۱۷:۱۷</string>
</resources>