<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/transactionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_report_textView_payment" />

        <TextView
            android:id="@+id/TransactionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_100"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactionTitle"
            android:text="@string/text_report_textView_date_time" />

        <View
            android:id="@+id/destinationInfoView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@color/red_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TransactionTime" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationInfoView">

            <View
                android:id="@+id/categoryView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_100" />

            <View
                android:id="@+id/categoryShimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/green_100"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/noteEditText"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textAlignment="center"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:hint="@string/text_report_hint_note" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noteEditText"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@android:drawable/ic_menu_edit" />

            <View
                android:id="@+id/editShimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </FrameLayout>

        <View
            android:id="@+id/destinationInfoV1iew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/remainingBalanceTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditText" />

        <TextView
            android:id="@+id/remainingBalanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/receiptButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_report_textView_balanced" />

        <Button
            android:id="@+id/receiptButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_report_button_transaction" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>